# travel-manager-app

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: context.ts  enums.ts  error-page.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20231221082933_travel.sql  20240106020657_currency_to_travel.sql  20240110120059_dates_to_travel.sql  20240212082140_created_at_to_travel.sql  20240215084408_init_transaction.sql
src-tauri/src/: db.rs  main.rs  tests.rs
src-tauri/src/app/: country.rs  country_iso_wrapper.rs  currency.rs  mod.rs  transaction.rs  travel.rs  utils.rs
src/components/: Navbar.tsx
src/components/Transaction/: TransactionAddButtonDialog.tsx  TransactionAddEditForm.tsx  TransactionEditButtonDialog.tsx  TransactionList.tsx  TransactionListSkeleton.tsx
src/components/Travel/: TravelAddButtonDialog.tsx  TravelAddEditForm.tsx  TravelEditButtonDialog.tsx  TravelInfo.tsx  TravelInfoSkeleton.tsx  TravelList.tsx  TravelManager.tsx
src/components/TravelAddEditForm/: TravelAddEditForm.tsx
src/components/TravelList/: TravelList.tsx
src/components/TravelManager/: TravelManager.css  TravelManager.tsx
src/components/ui/: progress.tsx
src/interfaces/: Country.ts  Currency.ts  Travel.ts
src/lib/: toastHandlers.tsx  utils.ts
src/routes/: dashboard.tsx  root.tsx  transactions.tsx
