[package]
name = "travel-manager-app"
version = "0.2.0"
description = "An application to manage travel's expenses and places to visit"
authors = ["Philippe Lopes"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [] }
dirs = "5.0.1"
# Database SQLite
tokio = { version = "1.0.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
# Error handler
anyhow = "1.0.76"
# ISO
isocountry = { version = "0.3.2" }
iso_currency = { version = "0.4.4", features = ["iterator"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
